fix: fix scroll container regions z-index issues (#263)
This fix is meant to isolate scroll container regions from each other,
this is needed to prevent z-index wars between elements in different regions.

With this change, every element in a scroll container region (no matter how high
it's z-index is) won't compete with elements form other regions (and the region itself)

--- a/themesource/atlas_core/web/core/widgets/_scroll-container-react.scss
+++ b/themesource/atlas_core/web/core/widgets/_scroll-container-react.scss
@@ -192,6 +192,7 @@
         &:not(.mx-scrollcontainer-nested) {
             -webkit-overflow-scrolling: touch;
         }
+        isolation: isolate;
     }
 
     // for push aside and slide over the main part should be non-interactive if sidebar is open
